overflow-fix

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -13,7 +13,7 @@ html {
 
 body {
     font-family: 'Inter', sans-serif;
-    overflow-x: hidden;
+
 }
 
 #wrapper_loader {
