--- a/Css/text-bento.css
+++ b/Css/text-bento.css
@@ -8,7 +8,7 @@
     margin-bottom: 50px;
     height: max-content;
     margin-bottom: auto;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .text-bento2 {
